--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ ort = "2.0.0-rc.10"
 # Opt-in accelerators (forwarded to `ort`)
 cuda = ["ort/cuda"]
 tensorrt = ["ort/tensorrt"]
+directml = ["ort/directml"]
